Update build.gradle to work with recent changes